-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

Open Search Server 1.2

- 2900462: Upgrade POI to 3.5 for xlsx and docs support
- 2900449: Upgrade PDFBox to 0.8
- 2888788: Upgrade Lucene to release 2.9.x

Open Search Server 1.1.2

New features:
- 2910029: Lucene read only support

Bug fixes
- 2911906: Sort functionnality seem to ignore sort order
- 2908345: Performance issue with large field cache
- 2905076: Issue with performance of web crawler
- 2903935: Negative value on web crawler statistics
- 2898343: Behaviour problem of wildcard function
- 2899784: duplication of returned field in returned xml

Open Search Server 1.1.1

Bug fixes
- 2886651: Default operator is not preserved when saving query
- 2886645: Issue with lemmatisation using the web crawler
- 2884347: Field seem to be lost if renamed
- 2884344: Renaming a field then deleting: not removed from the bo
- 2884275: Duplicated documents when using empty index template

Open Search Server 1.1

New features
- 2882224: Stress test for insertion
- 2881642: Set maximum number of segments for index optimization
- 2865088: Add default parser for web and file crawler
- 2864468: Indexation plugin within web crawler
- 2855049: Add a description for parsers
- 2854421: Added Romanian, Turkish and Danish support
- 2848588: Robots.txt view on web crawler
- 2847820: Add Russian and Chinese language support
- 2846159: Replace textfield by a menu for langage selection
- 2843516: Sort field list by alphabetic order
- 2843182: Use the library apache commons.io
- 2836913: Return the rows parameter in the search API result
- 2833103: Remove XML/HTML tag on XML upload
- 2826651: Synonyms support
- 2828734: Add Spellchecker ability
- 2812808: Management of several indices
- 2818592: Unique field and default field set up
- 2818075: OpenDocument Format support
- 2816562: New data directory in package
- 2816561: Upgrade documentation for 1.1